# panfilov-blog

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml
chat/: apps.py  context_processors.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_auto_20190831_1621.py  0003_auto_20190901_1936.py  0004_auto_20190902_0305.py
mickroservices/: __init__.py  admin.py  apps.py  urls.py  utils.py
mickroservices/forms/: __init__.py  idea.py  news.py  questions.py  training.py
mickroservices/migrations/: 0001_initial.py  0002_newspage.py  0003_auto_20190715_1935.py  0004_auto_20190717_0858.py  0005_marketingmaterial.py  0006_marketingmaterial_type.py  0007_auto_20190718_0828.py  0008_auto_20190718_1954.py  0009_auto_20190718_1956.py  0010_ideamodel.py  0011_documentsushi.py  0012_auto_20190818_1853.py  0013_auto_20190824_2304.py  0014_auto_20190825_0805.py  0015_subjects.py  0016_documentsushi_sub_type.py  0017_subjects_type.py  0018_auto_20190830_1214.py  0019_auto_20190903_0852.py  0019_auto_20190905_1023.py  0020_questionmodel_user.py  0021_merge_20190911_2149.py  0022_ideamodel_file.py  0023_questionmodel_hide.py  0024_newspage_announcement.py  0025_auto_20200301_2003.py  0026_blog.py  0027_newspage_coast.py  0028_auto_20200308_0101.py  0029_auto_20200308_0119.py  0030_blog_image.py  0031_newspage_type_classes.py  0032_texttemplate_extra_body.py  0033_auto_20200517_1700.py  0034_auto_20200517_2202.py
mickroservices/models/: idea.py  (+7 more)
my_proj/: settings.py  urls.py  wsgi.py
sushi_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+365 files in other folders)
